the_project/todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 1234
      targetPort: 4000
      protocol: TCP
