the_project/todo_app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: project
  labels:
    app.kubernetes.io/name: todo-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: todo-svc
                port:
                  number: 1234
